# 1ai-auto-hunt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
_rules/: SEED_INFO.txt
docs/exploration/: CODEBASE_AUDIT.md
docs/research/: FEATURE_MATRIX.md  GAP_ANALYSIS.md
docs/sprints/: SPRINT_1.md
src/: __init__.py  cli.py  mcp_server.py  stdio.py
src/adapters/: __init__.py  account.py  affiliate.py  phonefarm.py  proxy.py  social.py  waha.py
src/api/: __init__.py  app.py  auth.py  deps.py
src/core/: __init__.py  captcha.py  config.py  db.py  exceptions.py  logger.py  phone.py  proxy.py  schema.py
src/hunts/: __init__.py
src/hunts/boost/: __init__.py  anti_detect.py  fulfillment.py  models.py  order_api.py  pricing.py
src/hunts/checkout/: __init__.py  anti_bot.py  models.py  monitor.py  resell.py  router.py  shopee.py  sniper.py  timer.py  tokped.py
src/hunts/domain/: __init__.py  flip.py  models.py  router.py  scanner.py  sniper.py  vet.py
src/hunts/factory/: __init__.py  ager.py  creator.py  models.py  pricing.py  store.py
src/hunts/kdp/: __init__.py  generator.py  publisher.py  router.py
src/hunts/media/: __init__.py  influencer.py  router.py  voice.py
src/hunts/stream/: __init__.py  farm.py  playlist.py  router.py
tests/unit/: test_anti_bot.py  test_boost_pricing.py  test_checkout_timer.py  test_factory_pricing.py
