[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "1ai-auto-hunt"
version = "0.1.0"
description = "Money-making automation platform — account creation, flash-sale checkout, social-media boost"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "playwright>=1.45,<2",
    "sqlalchemy>=2.0,<3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "rich>=13.7,<14",
    "click>=8.1,<9",
    "aioredis>=2.0,<3",
    "alembic>=1.13,<2",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
    "aiofiles>=24.1,<25",
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
]

[project.scripts]
hunt = "src.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF",
]
ignore = ["S101", "S603", "S607"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: pure logic, no I/O",
    "integration: needs external services",
    "e2e: full flow with browser",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
